2005-07-26  Ben Maurer  <bmaurer@ximian.com>

	* gc-profiler.c: Patch from Brion Vibber Don't use obsolete
	function.

2005-03-28  Ben Maurer  <bmaurer@ximian.com>

	* gc-profiler.c: Write out summarized type allocation data.

2005-01-24  Ben Maurer  <bmaurer@ximian.com>

	* gc-profiler.c: Update after lupus's runtime changes.

2005-01-23  Ben Maurer  <bmaurer@ximian.com>

	* gc-profiler.c: Update, after runtime changes

2005-01-21  Ben Maurer  <bmaurer@ximian.com>

	* gc-profiler.c (do_default_file_name): Create the default file
	name from the pid.
	(mono_profiler_startup): Use the above.

	Thanks to Miguel for the great idea.

2005-01-20  Ben Maurer  <bmaurer@ximian.com>

	* gc-profiler.c (prof_marks_set): Fix typo

2005-01-16  Ben Maurer  <bmaurer@ximian.com>

	* gc-profiler.c: Emit dumps of the heap about every MB of
	data. This will allow the reader to do stuff faster. Also, emit
	tables of the size of the heap over time

2005-01-15  Ben Maurer  <bmaurer@ximian.com>

	* gc-profiler.c: Emit heap size info. File format updates.

2005-01-12  Ben Maurer  <bmaurer@ximian.com>

	* gc-profiler.c: Fixes for endian crap.

2005-01-12  Geoff Norton  <gnorton@customerdna.com>

        * gc-profiler.c:  Rename write to prof_write to avoid name clash on 
        OSX.

2005-01-09  Ben Maurer  <bmaurer@ximian.com>

	* *: Initial Import.
