@@ -1,3 +1,8 @@
+2005-10-07  Ben Maurer  <bmaurer@ximian.com>
+
+	* gc-profiler.c: Patch from Michal Moskal to make sure things work
+	on amd64.
+
 2005-07-26  Ben Maurer  <bmaurer@ximian.com>
 
 	* gc-profiler.c: Patch from Brion Vibber Don't use obsolete
